# ggsql

./: .gitignore  .nojekyll  CLAUDE.md  Cargo.toml  EXAMPLES.md  examples.html  index.html  installation.html  search.json  sitemap.xml
.github/workflows/: build.yaml  python-release.yml  python.yml
doc/: _quarto.yml  examples.qmd
ggsql-R/: DESCRIPTION
ggsql-R/R/: engine.R
ggsql-R/inst/: test_chunks.qmd
ggsql-R/tests/testthat/: test-engine.R
ggsql-jupyter/src/: display.rs  executor.rs  kernel.rs
ggsql-python/: README.md  pyproject.toml
ggsql-python/src/: lib.rs
ggsql-python/tests/: test_ggsql.py
site_libs/bootstrap/: bootstrap-aacdff9911f31d2e9adf9f5eb7276c19.min.css  bootstrap-dark-78e00d96e8eaacf9eca6a28872d1d014.min.css
src/: Cargo.toml  api.rs  cli.rs  lib.rs  rest.rs
src/doc/: API.md
src/parser/: builder.rs
src/reader/: duckdb.rs  mod.rs  spec.rs
src/writer/: mod.rs  vegalite.rs
syntax/: index.html
syntax/clause/: draw.html  facet.html  label.html  project.html  scale.html  visualise.html
syntax/layer/: area.html  bar.html  boxplot.html  density.html  histogram.html  line.html  path.html  point.html  polygon.html  ribbon.html  violin.html
tree-sitter-ggsql/src/: grammar.json  node-types.json  parser.c
tree-sitter-vvsql/: grammar.js
tree-sitter-vvsql/queries/: highlights.scm
vvsql-jupyter/: Cargo.toml  README.md
vvsql-jupyter/src/: executor.rs  kernel.rs  lib.rs  main.rs
vvsql-jupyter/tests/: README.md  test_compliance.py  test_integration.py
vvsql-jupyter/tests/fixtures/: sample_notebook.ipynb  test_queries.sql
(+12 files in other folders)
