[package]
name = "vvsql-jupyter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Jupyter kernel for vvSQL"

[[bin]]
name = "vvsql-jupyter"
path = "src/main.rs"

[lib]
name = "vvsql_jupyter"
path = "src/lib.rs"

[dependencies]
# Core vvsql library
vvsql = { path = "../src", features = ["duckdb", "vegalite"] }

# Need polars for DataFrame type
polars = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Jupyter kernel - we'll try zeromq approach first since it's proven
zeromq = { version = "0.4", features = ["tokio-runtime", "tcp-transport"] }
bytes = "1.0"

# Message authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID for message IDs
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
tempfile = "3.8"
